--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -53,31 +53,37 @@
                             android:layout_marginLeft="15dp"
                             android:layout_marginTop="15dp"
                             android:src="@drawable/ic_baseline_account_box_24" />
+
                         <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            >
+                            android:layout_marginLeft="15dp"
+                            android:layout_width="291dp"
+                            android:layout_height="wrap_content">
+
 
                             <TextView
                                 android:id="@+id/account"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="15dp"
+                                android:layout_marginStart="7dp"
+                                android:layout_marginLeft="7dp"
                                 android:layout_marginTop="15dp"
                                 android:gravity="center"
                                 android:text="Account"
                                 android:textColor="@color/black"
                                 android:textSize="20sp" />
 
-
                             <TextView
+                                android:id="@+id/changePassword"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_margin="5dp"
-                                android:gravity="center"
-                                android:layout_marginLeft="10dp"
                                 android:layout_below="@+id/account"
-                                android:text="create password or change password"
+                                android:layout_marginStart="5dp"
+                                android:layout_marginLeft="15dp"
+                                android:layout_marginTop="5dp"
+                                android:layout_marginEnd="5dp"
+                                android:layout_marginBottom="5dp"
+                                android:gravity="center"
+                                android:text="Change password"
                                 android:textColor="#D1CBCB"
                                 android:textSize="15sp" />
 
@@ -86,7 +92,7 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="85dp"
                         android:orientation="horizontal"
                         android:padding="15sp">
 
@@ -96,8 +102,8 @@
                             android:src="@drawable/ic_baseline_notifications_active_24" />
 
                         <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_width="212dp"
+                            android:layout_height="82dp"
                             android:layout_gravity="center_vertical"
                             android:layout_marginStart="15dp"
                             android:gravity="center_vertical"
@@ -122,22 +128,31 @@
                                 android:textSize="15sp" />
 
                         </LinearLayout>
+
+                        <Switch
+                            android:id="@+id/switch1"
+                            android:layout_width="74dp"
+                            android:layout_height="61dp"
+                            android:layout_weight="1"
+                            android:paddingTop="10dp" />
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="85dp"
+                        android:onClick="openfaq"
                         android:orientation="horizontal"
                         android:padding="15sp">
 
                         <ImageView
                             android:layout_width="35dp"
                             android:layout_height="35dp"
-                            android:src="@drawable/ic_baseline_help_center_24"/>
+                            android:layout_marginTop="7dp"
+                            android:src="@drawable/ic_baseline_help_center_24" />
 
                         <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_width="284dp"
+                            android:layout_height="86dp"
                             android:layout_gravity="center_vertical"
                             android:layout_marginStart="15dp"
                             android:gravity="center_vertical"
@@ -163,15 +178,20 @@
 
                         </LinearLayout>
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:onClick="logout"
                         android:orientation="horizontal"
                         android:padding="15sp">
 
                         <ImageView
                             android:layout_width="35dp"
                             android:layout_height="35dp"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginTop="9dp"
                             android:src="@drawable/logout">
 
                         </ImageView>
@@ -180,7 +200,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:layout_marginStart="15dp"
+                            android:layout_marginStart="7dp"
+                            android:layout_marginLeft="7dp"
                             android:gravity="center_vertical"
                             android:orientation="vertical">
 
@@ -189,7 +210,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_margin="5dp"
                                 android:gravity="center"
-                                android:text=" Logout"
+                                android:text="Logout"
                                 android:textColor="@color/black"
                                 android:textSize="20sp" />
 
@@ -198,7 +219,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_margin="5dp"
                                 android:gravity="center"
-                                android:text="logout your account"
+                                android:text="logout from your account"
                                 android:textColor="#D1CBCB"
                                 android:textSize="15sp" />
 
@@ -212,6 +233,7 @@
         </LinearLayout>
 
     </ScrollView>
+
 
 
 </LinearLayout>
