--- a/app/src/main/res/layout/nav_header_home_page.xml
+++ b/app/src/main/res/layout/nav_header_home_page.xml
@@ -14,27 +14,22 @@
 
     <ImageView
         android:id="@+id/profileNavigationImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:layout_alignParentTop="true"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@drawable/aaaaa" />
 
     <TextView
         android:id="@+id/aa"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="@string/nav_header_title"
+        android:text="Farm Easy"
         android:layout_below="@+id/profileNavigationImage"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/aa"
-        android:text="ananthagriservices@xxxx" />
+
 
 </RelativeLayout>
