--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,6 +34,7 @@
         android:layout_marginTop="54dp">
 
         <ImageButton
+            android:id="@+id/machine"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="60dp"
@@ -41,6 +42,7 @@
             android:src="@drawable/tractt" />
 
         <ImageButton
+            android:id="@+id/plants"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignParentEnd="true"
@@ -83,6 +85,7 @@
         />
 
     <ImageButton
+        android:id="@+id/fertilizers"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/fert"
