--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -54,7 +54,7 @@
         android:paddingVertical="4dp"
         android:paddingStart="12dp"
         android:paddingEnd="8dp"
-        android:text="Ananth Services"
+        android:hint="Name"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/iv_display_picture"
         app:layout_constraintEnd_toEndOf="@+id/et_description"
@@ -113,7 +113,6 @@
         android:paddingStart="12dp"
         android:paddingEnd="8dp"
         android:textColor="@color/black"
-        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -133,7 +132,6 @@
         android:paddingVertical="4dp"
         android:paddingStart="12dp"
         android:paddingEnd="8dp"
-        android:text="Ananthxxxxxxxx@gmail.com"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.562"
@@ -153,7 +151,7 @@
         android:paddingVertical="4dp"
         android:paddingStart="12dp"
         android:paddingEnd="8dp"
-        android:text="+9187xxxxxxxx90"
+        android:hint="Enter your number"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
