--- a/app/src/main/res/layout/nav_header_home_page.xml
+++ b/app/src/main/res/layout/nav_header_home_page.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
+    android:background="@color/green"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -19,13 +19,15 @@
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:layout_alignParentTop="true"
-        app:srcCompat="@drawable/aaaaa" />
+        app:srcCompat="@drawable/alogo" />
 
     <TextView
+        android:textColor="@color/white"
         android:id="@+id/aa"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:layout_marginLeft="17dp"
         android:text="Farm Easy"
         android:layout_below="@+id/profileNavigationImage"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
