--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -68,7 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="Log In"
+            android:text=""
             android:textColor="#1B1A1A"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -123,7 +123,8 @@
             android:layout_height="44dp"
             android:layout_marginTop="12dp"
             android:ems="10"
-            android:hint="enter your email"
+            android:textSize="17sp"
+            android:hint="Enter your email"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toTopOf="@+id/textView6"
             app:layout_constraintEnd_toEndOf="parent"
