--- a/app/src/main/res/layout/activity_saved_ads.xml
+++ b/app/src/main/res/layout/activity_saved_ads.xml
@@ -53,6 +53,7 @@
             android:layout_marginTop="180dp">
 
             <ImageView
+                android:id="@+id/searchh"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:src="@drawable/search_24"/>
@@ -74,7 +75,7 @@
             android:layout_marginTop="350dp"
             tools:ignore="MissingConstraints" />
         <TextView
-
+            android:id="@+id/searchhh"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
@@ -120,6 +121,13 @@
             android:backgroundTint="#D3D3D3"
             />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/savedAdsRecycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
