--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -32,16 +32,16 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="16dp"
-                app:srcCompat="@drawable/ic_person_outline" />
+                app:srcCompat="@drawable/icon_camera" />
 
             <EditText
                 android:id="@+id/editName"
                 android:layout_width="188dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="180dp"
-                android:layout_marginLeft="180dp"
                 android:layout_marginTop="40dp"
                 android:ems="10"
+                android:textSize="17dp"
                 android:hint="Enter your name here "
                 android:inputType="textPersonName" />
 
@@ -52,21 +52,10 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="150dp"
-                android:text="Contact Information"
+                android:text="Contact Information *"
                 android:textColor="#090909"
                 android:textSize="24sp"
                 android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/star"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="225dp"
-                android:layout_marginLeft="225dp"
-                android:layout_marginTop="150dp"
-                android:text="*"
-                android:textColor="#FF5722"
-                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/Information"
@@ -83,23 +72,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
-
+                android:textSize="17dp"
                 android:layout_marginTop="220dp"
                 android:ems="10"
                 android:hint="Enter your phone number"
                 android:inputType="textEmailAddress" />
 
-            <TextView
-                android:id="@+id/changeMailText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="305dp"
-                android:layout_marginLeft="305dp"
-                android:layout_marginTop="255dp"
-                android:layout_marginBottom="8dp"
-                android:text="change"
-                android:textColor="#4CAF50"
-                android:textSize="20sp" />
+
 
             <EditText
                 android:id="@+id/editTextTextPersonName"
@@ -108,6 +87,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="320dp"
+                android:textSize="17dp"
                 android:ems="10"
                 android:hint="Enter your description here"
                 android:inputType="textPersonName" />
@@ -117,9 +97,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
+
                 android:layout_marginTop="280dp"
-                android:text="Description"
+                android:text="Description *"
                 android:textColor="#0E0E0E"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -128,21 +108,11 @@
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="320dp"
-                android:layout_marginLeft="320dp"
+                android:layout_gravity="end"
+                android:layout_marginEnd="10dp"
                 android:layout_marginTop="355dp"
                 android:text="0/250" />
 
-            <TextView
-                android:id="@+id/star3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="135dp"
-                android:layout_marginLeft="135dp"
-                android:layout_marginTop="280dp"
-                android:text="*"
-                android:textColor="#FF5722"
-                android:textSize="20sp" />
 
 
         </androidx.cardview.widget.CardView>
@@ -168,7 +138,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:text="Location"
+                android:text="Location *"
                 android:textColor="#101010"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -181,18 +151,11 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="50dp"
                 android:ems="10"
+                android:textSize="17dp"
                 android:hint="enter your location"
                 android:inputType="textPersonName" />
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="240dp"
-                android:layout_marginLeft="240dp"
-                android:layout_marginTop="90dp"
-                android:text="Use current location"
-                android:textColor="#4CAF50" />
+
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
@@ -214,20 +177,11 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
-                android:text="Id Proofs "
+                android:text="Id Proofs *"
                 android:textColor="#0C0C0C"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="110dp"
-                android:layout_marginLeft="110dp"
-                android:layout_marginTop="20dp"
-                android:text="*"
-                android:textColor="#FF5722" />
 
             <TextView
                 android:id="@+id/Shopname"
@@ -249,6 +203,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="100dp"
                 android:ems="10"
+                android:textSize="17dp"
                 android:inputType="textPersonName" />
 
             <TextView
@@ -257,7 +212,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="170dp"
-                android:text="Shop Photo"
+                android:text="Shop Photo *"
                 android:textColor="#121111"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -292,7 +247,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="270dp"
-                android:text="License photo "
+                android:text="License photo *"
                 android:textColor="#131313"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -303,7 +258,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="380dp"
-                android:text="GSTIN Number"
+                android:text="GSTIN Number *"
                 android:textColor="#232222"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -315,6 +270,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="410dp"
                 android:ems="10"
+                android:textSize="17dp"
                 android:inputType="phone" />
 
             <TextView
@@ -323,9 +279,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="460dp"
-                android:text="Adhaar Card Number"
+                android:text="Adhaar Card Number *"
                 android:textColor="#191919"
-                android:textSize="20sp"
+                android:textSize="17sp"
                 android:textStyle="bold" />
 
             <EditText
@@ -343,7 +299,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="545dp"
-                android:text="Adhaar Photo"
+                android:text="Adhaar Photo *"
                 android:textColor="#121212"
                 android:textSize="20sp"
                 android:textStyle="bold" />
