--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
 
         <TextView
             android:id="@+id/logintitle"
-            android:layout_width="63dp"
+            android:layout_width="wrap_content"
             android:layout_height="33dp"
             android:layout_marginTop="40dp"
             android:text="Login"
