--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -56,7 +56,7 @@
 
                         <RelativeLayout
                             android:layout_marginLeft="15dp"
-                            android:layout_width="291dp"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
 
@@ -131,7 +131,7 @@
 
                         <Switch
                             android:id="@+id/switch1"
-                            android:layout_width="74dp"
+                            android:layout_width="0dp"
                             android:layout_height="61dp"
                             android:layout_weight="1"
                             android:paddingTop="10dp" />
