--- a/app/src/main/res/layout/activity_user_details_individual.xml
+++ b/app/src/main/res/layout/activity_user_details_individual.xml
@@ -12,10 +12,12 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
-            android:layout_width="379dp"
+            android:layout_width="match_parent"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
             android:layout_height="411dp"
             app:cardCornerRadius="20dp"
-            app:cardElevation="20dp"
+            app:cardElevation="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.592"
@@ -23,38 +25,26 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.066">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imageView"
                 android:layout_width="119dp"
                 android:layout_height="118dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
                 android:layout_marginTop="16dp"
-                app:srcCompat="@drawable/camera_alt_24" />
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/camera_alt_24"/>
 
-            <EditText
-                android:id="@+id/editName"
-                android:layout_width="188dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="180dp"
-                android:layout_marginLeft="180dp"
-                android:layout_marginTop="40dp"
-                android:ems="10"
-                android:hint="Enter your name here "
-                android:inputType="textPersonName" />
 
             <TextView
                 android:id="@+id/ContactInformation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
+
                 android:layout_marginTop="150dp"
                 android:text="Contact Information *"
                 android:textColor="#090909"
                 android:textSize="24sp"
                 android:textStyle="bold" />
-
 
             <TextView
                 android:id="@+id/Information"
@@ -67,22 +57,24 @@
 
             <EditText
                 android:id="@+id/EmailEdit"
-                android:layout_width="355dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
+                android:layout_height="wrap_content"
                 android:textSize="17dp"
                 android:layout_marginTop="220dp"
                 android:ems="10"
                 android:hint="Enter your phone number"
-                android:inputType="textEmailAddress" />
+                android:inputType="number" />
 
 
 
             <EditText
                 android:id="@+id/editTextTextPersonName"
-                android:layout_width="352dp"
+
                 android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
                 android:textSize="17dp"
@@ -143,9 +135,10 @@
 
             <EditText
                 android:id="@+id/editTextTextPersonName2"
-                android:layout_width="350dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
                 android:textSize="17dp"
                 android:ems="10"
