--- a/app/src/main/res/layout/activity_saved_ads.xml
+++ b/app/src/main/res/layout/activity_saved_ads.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -86,11 +86,10 @@
             tools:ignore="MissingConstraints" />
     </RelativeLayout>
 
-
-
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
+        android:layout_alignParentBottom="true"
         app:layout_constraintBottom_toBottomOf="parent" >
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottomappbar"
@@ -130,4 +129,4 @@
         />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
